fix: remove h1–h4 styles causing layout overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,25 +15,6 @@ body {
   color: var(--foreground);
 }
 
-body h1,
-h2,
-h3,
-h4 {
-  font-weight: 800;
-}
-
-body h1 {
-  font-size: 3.815rem;
-}
-
-h2 {
-  font-size: 3.052rem;
-}
-
-h3 {
-  font-size: 2.441rem;
-}
-
-h4 {
-  font-size: 1.953rem;
+p {
+  font-family: var(--font-space-mono);
 }
